--- a/loos.dox
+++ b/loos.dox
@@ -15,8 +15,8 @@ School of Medicine & Dentistry, University of Rochester\n
 <h2>Quick Links</h2>
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the mailing list</a>
-      - \subpage building "Building LOOS, including PyLOOS (Beta
-      version of our Python-LOOS interface)"
+      - \subpage building "Building LOOS"
+          - \ref building_pyloos "Building PyLOOS, the Python Interface to LOOS"
       - \subpage tools "Tools included with LOOS"
       - \subpage citing "Citing LOOS in published work"
       - \subpage Changes
@@ -433,7 +433,9 @@ scons PREFIX=/opt/loos-1.6.0 install
 ln -s /opt/loos-1.6.0 /opt/loos-latest
 \endverbatim
 
-<H3> +=+=+=+=+=+=+=+ NEW BETA-RELEASE OF PYTHON INTERFACE +=+=+=+=+=+=+=+</H3>
+<hr>
+\subsection building_pyloos Building PyLOOS, the Python Interface to LOOS
+<H3> +=+=+=+=+=+=+=+ BETA-RELEASE +=+=+=+=+=+=+=+</H3>
 
 To build the beta-release of PyLOOS, the python interface to LOOS, use:
 
@@ -444,7 +446,7 @@ scons pyloos
 See the INSTALL file and PYLOOS-FAQ for more information about
 building and using PyLOOS.
 
-<H3> +=+=+=+=+=+=+=+ NEW BETA-RELEASE OF PYTHON INTERFACE +=+=+=+=+=+=+=+</H3>
+<hr>
 
 \subsection general General Notes
 
