--- a/loos.dox
+++ b/loos.dox
@@ -20,6 +20,8 @@ School of Medicine & Dentistry, University of Rochester\n
       - \subpage tools "Tools included with LOOS"
       - \subpage citing "Citing LOOS in published work"
       - \subpage Changes
+      - \subpage FAQ
+          - \ref faq_pyloos "FAQ for PyLOOS"
 
 \section intro Introduction
 
@@ -2346,5 +2348,180 @@ torsion() are now in the \c loos::Math namespace.
  were correctly transformed, but anything that used the \c XForms were
  affected by varying degrees.
 </UL>
+
+*/
+
+
+/*! \page FAQ Frequently Asked Questions
+\section faq_loos LOOS
+\subsection faq_loos_using_tools Using LOOS Tools
+<DL>
+<DT> What units does LOOS use for coordinates?
+<DD> LOOS uses angstroms as the output unit of distance, even when the input 
+coordinates are in other units (e.g. nanometers for GROMACS files).  All output
+is in plain text format, and follows general unix/linux conventions.
+</DL>
+
+<hr><hr>
+\section faq_pyloos PyLOOS
+
+<hr>
+<B>
+NOTE: This FAQ is specific to the Python interface to LOOS (PyLOOS).
+This interface is begin released as a beta-version and, as such, it
+may change significantly in future releases.  Please report any bugs
+found to "loos-maintainer [at] urmc.rochester.edu".  Similarly, please feel
+free to contact us regarding new functionality or better
+implementations.
+</B>
+<hr>
+
+\subsection faq_pyloos_building Building PyLOOS
+<DL>
+<DT>	What operating systems support PyLOOS?
+<DD>	Only LINUX is supported at this time.  For specific versions,
+	see the start of the INSTALL file.
+
+<DT>	How do I build PyLOOS?
+<DD>	You will need to install a recent version of Swig.  For
+	details specific to your OS, please see the INSTALL file.
+	PyLOOS is not part of the default build for LOOS.  You must
+	tell SCons to build it by saying "scons pyloos".
+
+<DT>	How do I use PyLOOS?
+<DD>	Your environment needs to be setup to allow Python to locate
+	the PyLOOS libraries.  LOOS now provides two setup scripts,
+	setup.sh for bash users, and setup.csh for tcsh users.  Source
+	the appropriate script, then execute Python and import from
+	loos.
+
+<DT>	Can I install PyLOOS?
+<DD>	We do not currently have an install mechanism for PyLOOS.
+	However, once the setup script has been sourced, python will
+	find it regardless of where you run Python.
+</DL>
+
+\subsection faq_pyloos_using Using PyLOOS
+<DL>
+<DT>	Setting parameters in LOOS objects
+<DD>	In C++, it is possible to have two different methods for
+	setting a parameter value,
+\code
+		  GCoord c;
+		  c.x() = 42;
+		  c.x(42);
+\endcode
+	In both cases, the X-coordinate is set to 42.  In Python,
+	however, you must use the second form, c.x(42).
+
+<DT>	Making copies of LOOS objects
+<DD>	Remember that in Python, saying "a = b" does not actually copy
+	b.  Python has a "copy" package which supports a shallow copy
+	using the copy() function and a deep copy using the deepcopy()
+	function.  A shallow copy is similar to how a LOOS object would
+	normally be copied in C++.  For example,
+\code
+		  AtomicGroup A;
+		  AtomicGroup B = A;
+\endcode
+
+	In this case, B is a shallow copy of A.  That is, the atoms
+	are shared between A and B.  However, B can contain a
+	different set of atoms from A, e.g.
+\code
+		  B.append(another_atom);
+\endcode
+	Now B will have an extra atom that A will be lacking, but
+	existing atoms will still be shared between A and B.  In
+	contrast, in the PyLOOS equivalent,
+\code
+		  A = AtomicGroup()
+		  B = A
+		  B.append(another_atom)
+\endcode
+	A and B are the same and now both have the extra atom.  To
+	make a copy of A that behaves like the C++ copy, use Python's
+	copy package to make a shallow copy,
+\code
+	          import copy
+		  A = AtomicGroup()
+		  B = copy.copy(A)
+		  B.append(another_atom)
+\endcode
+	Now, B has an extra atom and existing atoms are shared.
+
+	Since atoms are shared in a shallow copy of an AtomicGroup,
+	modifying the atom in one group will modify the atom in all
+	groups that contain that atom.
+\code
+	          import copy
+		  an_atom = Atom(1, "CA", GCoord(1,2,3))
+	          A = AtomicGroup()
+		  A.append(an_atom)
+
+		  B = copy.copy(A)
+		  B[0].id(42)
+\endcode
+	Here, we've created an atom, appended it to AtomicGroup A,
+	then made a shallow copy into AtomicGroup B.  However, atoms
+	are shared between AtomicGroups that have been
+	shallow-copied.  Therefore, when the atomid of the first atom
+	in B is changed, since the atom is shared between A and B,
+	both groups see the change.  Sometimes, it is necessary to
+	have a separate copy of a group so that changes to the atom in
+	group B will not affect group A.  This requires a deep copy,
+\code
+	          import copy
+		  an_atom = Atom(1, "CA", GCoord(1,2,3))
+		  A = AtomicGroup()
+		  A.append(an_atom)
+
+		  B = copy.deepcopy(A)
+		  B[0].id(42)
+\endcode
+	Here, the atoms are no longer shared...each group has its own
+	copy of the atom.  Therefore, changing the atomid of the first
+	atom in group B does NOT change the first atom in group A.
+	This is equivalent to using the AtomicGroup::copy() function
+	in C++.
+
+<DT>	Why are my GCoords changing on me?
+<DD>	See above...  Remember that saying "a = b" in Python does
+	NOT copy the GCoord so when you change a, you're also changing
+	b.  Use "a = copy(b)" to get a new GCoord that's a copy of the
+	existing one.
+
+<DT>	What objects support copying?
+<DD>	Currently, Atom, GCoord, and AtomicGroup support copying.  For
+	Atom and GCoord, copy() and deepcopy() are functionally
+	equivalent.
+
+<DT>	How do I use the iterativeAlignment functions?
+<DD>	We do not currently have a direct interface to the C++
+	iterativeAlignment functions since they return a boost::tuple
+	object.  Instead, there are python-specific routines that
+	return an object containing the same information, i.e.
+\code	       
+	           result = iterativeAlignmentPy(model, traj)
+		   xforms = result.transforms
+		   final_rmsd = result.rmsd
+		   n = result.iterations
+\endcode
+	The python versions have the same interface as the C++ ones,
+	but the function names are suffixed with "Py".
+
+<DT>	Where did pAtoms go in PyLOOS?
+<DD>	Swig maps the boost shared pointer (pAtom) into the name
+	"Atom".  So, wherever you would use a pAtom in the C++ version
+	of your code, simply use Atom in PyLOOS.
+
+<DT>	Are there any examples of using PyLOOS?
+<DD>	Yes.  Look in the Packages/PyLOOS directory.  We will be
+	adding more examples in future releases.
+
+<DT>	Where are the matrix operations?
+<DD>	We currently assume that matrix operations are better handled
+	by the appropriate Python package (e.g. numpy).
+</DL>
 
 */
