--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-10    <tromo@spade.biophysics.rochester.edu>
+
+	* Removed the --center option in aligner (it's not needed and can
+	cause an unintended translation in the output)
+
 2012-06-15    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in water-inside (and also water-hist) affecting the
