--- a/INSTALL
+++ b/INSTALL
@@ -9,6 +9,7 @@
 | Fedora 14         |     +     |   +    |
 | Fedora 15         |     +     |   +    |
 | Fedora 16         |     +     |   +    |
+| Fedora 17         |     +     |   +    |
 |-------------------|-----------|--------|
 | Ubuntu 8.04 LTS   |     !     |   !    |
 | Ubuntu 10.04 LTS  |     +     |   !    |
@@ -33,6 +34,7 @@
 |-------------------|-----------|--------|
 | MacOS 10.6        |     +     |   -    |
 | MacOS 10.7        |     +     |   -    |
+| MacOS 10.8        |     +     |   -    |
 |-------------------|-----------|--------|
 
 
@@ -215,7 +217,9 @@ OpenSUSE 11.4: NOT SUPPORTED
 
 			-----= MACOS X =-----
 
-LOOS has been tested with MacOS 10.7, however, it *should* be
+***NOTE on MacOS 10.8 (Mountain Lion) compatability: only LOOS 2.0.1 (or more recent) is compatible***
+
+LOOS has been tested with MacOS 10.7 and 10.8, however, it *should* be
 compatable with version 10.4-10.6.
 
 First, make sure you have the Developer's Tools (i.e. XCode)
