Fixed typo and adjusted statement of PDB bugs
svn path=/software/LOOS/trunk/; revision=8682

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,9 @@
 2012-08-08    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in PDB reader where bonds (via CONECT records) were
-	not expliticly made symmetrical.
+	not explicitly made symmetrical.
 	* Fixed a side-effect in the PDB writer where the underlying PDB
-	would be sorted
+	would be sorted after writing.
 	* Changed PDB writer to only write out a-directional bonds.  The
 	symmetrical bonds are not written (i.e. A->B will be written into
 	a CONECT record, but not B->A)
