Added debian to the list for netcdf
svn path=/software/LOOS/trunk/; revision=8864

--- a/INSTALL
+++ b/INSTALL
@@ -213,7 +213,8 @@ Using the synaptic manager (or apt-get), install the following packages:
       scons
       libatlas-base-dev
       libatlas-headers
-      libatlas3gf-base (optional)
+      libatlas3gf-base [optional]
+      libnetcdf-dev [optional]
 
 
 * PyLOOS *
